Added some error message for user input

--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -15,36 +15,34 @@
         android:layout_height="@dimen/itemRVHeight"
         android:background="@color/white">
 
-    <TextView
-        android:id="@+id/eventNameTV"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/pictureRVSize"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="212dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="212dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="@{itemEventViewModel.name}"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/eventPictureIV"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/eventNameTV"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/pictureRVSize"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@{itemEventViewModel.name}"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/eventPictureIV"
+            app:layout_constraintStart_toEndOf="@+id/eventPictureIV"
+            app:layout_constraintTop_toTopOf="@+id/eventPictureIV"
+            app:layout_constraintVertical_bias="1.0" />
 
-    <ImageView
-        android:id="@+id/eventPictureIV"
-        android:layout_width="@dimen/pictureRVSize"
-        android:layout_height="@dimen/pictureRVSize"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        imageUrl="@{itemEventViewModel.imageUrl}"
-        app:layout_constraintVertical_bias="0.045" />
+        <ImageView
+            android:id="@+id/eventPictureIV"
+            imageUrl="@{itemEventViewModel.imageUrl}"
+            android:layout_width="@dimen/pictureRVSize"
+            android:layout_height="@dimen/pictureRVSize"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.045" />
 </android.support.constraint.ConstraintLayout>
 </layout>
