--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -21,14 +21,13 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/pictureRVSize"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:gravity="center"
             android:text="@{itemGroupViewModel.name}"
+            android:padding="10dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/groupPictureIV"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/groupPictureIV"
             app:layout_constraintTop_toTopOf="@+id/groupPictureIV"
             app:layout_constraintVertical_bias="0.0" />
@@ -39,8 +38,8 @@
             android:layout_width="@dimen/pictureRVSize"
             android:layout_height="@dimen/pictureRVSize"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="52dp"
-            android:layout_marginStart="52dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
