--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -22,30 +22,32 @@
             android:layout_width="@dimen/pictureRVSize"
             android:layout_height="@dimen/pictureRVSize"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.38" />
+            app:layout_constraintVertical_bias="0.357" />
 
         <TextView
             android:id="@+id/userNameSearchTV"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/pictureRVSize"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="184dp"
+            android:layout_marginEnd="280dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="184dp"
+            android:layout_marginRight="280dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:gravity="center"
             android:text="@{itemUserViewModel.name}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="10dp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintBottom_toBottomOf="@+id/userSearchPictureIV"
             app:layout_constraintStart_toEndOf="@+id/userSearchPictureIV"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.385" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toTopOf="@+id/userSearchPictureIV"
+            app:layout_constraintVertical_bias="1.0" />
     </android.support.constraint.ConstraintLayout>
 </layout>
