--- a/app/src/main/res/layout/fragment_events_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_events_in_subcategory.xml
@@ -11,6 +11,18 @@
 
 
         <TextView
+            android:id="@+id/eventsInSubcategoryIndicatorWhereUserIsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/eventsInSubcategoryCreateEventTV"
+            android:layout_marginLeft="29dp"
+            android:layout_marginStart="29dp"
+            android:text="@string/eventsInSubcategory"
+            android:textSize="16sp" />
+
+        <TextView
             android:id="@+id/eventsInSubcategoryCreateEventTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
