--- a/app/src/main/res/layout/fragment_my_events.xml
+++ b/app/src/main/res/layout/fragment_my_events.xml
@@ -1,23 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/twoFragmentHeight"
-        android:background="@color/white"
         android:layout_marginTop="305dp"
-        android:orientation="vertical">
+        android:background="@color/white">
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/myEventsEventRV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_event">
+        <TextView
+            android:id="@+id/myEventsIndicatorWhereUserIsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/myEvents"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/myEventsEventRV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/myEventsEventRV"
+            android:layout_width="match_parent"
+            android:layout_height="223dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/item_event">
 
-</LinearLayout>
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
