--- a/app/src/main/res/layout/fragment_personal_feed.xml
+++ b/app/src/main/res/layout/fragment_personal_feed.xml
@@ -12,16 +12,28 @@
         android:orientation="vertical">
 
 
+        <TextView
+            android:id="@+id/personalFeedIndicatorWhereUserIsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
+            android:text="@string/personalFeed"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/personalFeedCreatePostTV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/personalFeedCreatePostTV"
+            app:layout_constraintVertical_bias="0.0" />
+
         <ImageView
             android:id="@+id/personalFeedCreatePostIV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/personalFeedCreatePostTV"
             app:layout_constraintStart_toStartOf="@+id/personalFeedCreatePostTV"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_create_24px" />
@@ -46,12 +58,14 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
             android:layout_marginTop="8dp"
             android:text="@string/createPost"
             app:layout_constraintBottom_toTopOf="@+id/personalFeedPostRV"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/personalFeedCreatePostIV"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="1.0" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
