--- a/app/src/main/res/layout/fragment_events_in_category.xml
+++ b/app/src/main/res/layout/fragment_events_in_category.xml
@@ -1,16 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/eventsInCategoryEventRV"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/twoFragmentHeight"
-        android:background="@color/white"
-        android:layout_marginTop="305dp"
-        tools:listitem="@layout/item_event">
+        android:layout_marginTop="305dp">
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/eventsInCategoryEventRV"
+            android:layout_width="match_parent"
+            android:layout_height="228dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/item_event">
 
         </android.support.v7.widget.RecyclerView>
 
+        <TextView
+            android:id="@+id/eventsInCategoryIndicatorWhereUserIsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/eventsInCategory"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/eventsInCategoryEventRV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.272" />
+    </android.support.constraint.ConstraintLayout>
 </layout>
