--- a/app/src/main/res/layout/fragment_groups_in_category.xml
+++ b/app/src/main/res/layout/fragment_groups_in_category.xml
@@ -1,21 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/twoFragmentHeight"
         android:layout_marginTop="305dp"
         android:background="@color/white">
 
 
+        <TextView
+            android:id="@+id/groupsInCategoryIndicatorWhereUserIsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="36dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/groupsInCategory"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/groupsInCategoryGroupRV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/groupsInCategoryGroupRV"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="386dp"
+            android:layout_height="223dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
             tools:listitem="@layout/item_group" />
 
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </layout>
