--- a/app/src/main/res/layout/fragment_subcategories_event.xml
+++ b/app/src/main/res/layout/fragment_subcategories_event.xml
@@ -10,27 +10,40 @@
         android:background="@color/white">
 
         <TextView
+            android:id="@+id/SubcategoriesEventIndicatorWhereUserIsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginStart="28dp"
+            android:text="@string/subcategoriesEvent"
+            app:layout_constraintBottom_toBottomOf="@+id/personalFeedCreatePostTV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/personalFeedCreatePostTV"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
             android:id="@+id/personalFeedCreatePostTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:text="@string/createEvent"
             app:layout_constraintBottom_toTopOf="@+id/subcategoriesEventSubcategoryRV"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryButton" />
+            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryButton"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
             android:id="@+id/newEventInCategoryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/personalFeedCreatePostTV"
+            app:layout_constraintHorizontal_bias="0.566"
             app:layout_constraintStart_toStartOf="@+id/personalFeedCreatePostTV"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_create_24px" />
