--- a/app/src/main/res/layout/fragment_subcategories_group.xml
+++ b/app/src/main/res/layout/fragment_subcategories_group.xml
@@ -12,6 +12,18 @@
 
 
         <TextView
+            android:id="@+id/subcategoriesGroupIndicatorWhereUserIsTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="36dp"
+            android:layout_marginStart="36dp"
+            android:text="@string/subcategoriesGroup"
+            app:layout_constraintBottom_toBottomOf="@+id/subcategoriesGroupCreateGroupTV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/subcategoriesGroupCreateGroupTV"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
             android:id="@+id/subcategoriesGroupCreateGroupTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,7 +53,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/subcategoriesGroupSubcategoriesRV"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/createInCatOrSubcategoryRVHeight"
+            android:layout_height="190dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
