bugfix: getting account infos after first login, user profile fixed, after create post button redirect issue cleared (identical button redirect bugs remain)

--- a/app/src/main/res/layout/fragment_new_user_post.xml
+++ b/app/src/main/res/layout/fragment_new_user_post.xml
@@ -15,7 +15,7 @@
         android:background="@color/white">
 
         <Button
-            android:onClick="@{()->itemUserViewModel.onCreatePostClick()}"
+            android:onClick="@{(v) ->itemUserViewModel.createPost(v)}"
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
