--- a/app/src/main/res/layout/fragment_new_event_in_category.xml
+++ b/app/src/main/res/layout/fragment_new_event_in_category.xml
@@ -27,7 +27,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:onClick="@{()->itemCategoryViewModel.onCreateEventClick()}"
+            android:onClick="@{(v)->itemCategoryViewModel.onCreateEventClick(v)}"
             android:text="@string/create"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
