fixed a mistakes in user profile layout

--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -58,7 +58,7 @@
             android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@+id/userProfilePostRV"
             app:layout_constraintEnd_toEndOf="@+id/userSubscribersTV"
-            app:layout_constraintHorizontal_bias="0.621"
+            app:layout_constraintHorizontal_bias="0.512"
             app:layout_constraintStart_toStartOf="@+id/userSubscribersTV"
             app:layout_constraintTop_toBottomOf="@+id/userNameTV"
             app:layout_constraintVertical_bias="0.0" />
@@ -67,8 +67,8 @@
             android:id="@+id/userSubscriptionsTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="92dp"
-            android:layout_marginRight="92dp"
+            android:layout_marginEnd="56dp"
+            android:layout_marginRight="56dp"
             android:layout_marginTop="8dp"
             android:text="@{itemUserViewModel.numberOfSubscriptions}"
             android:textSize="20sp"
@@ -91,7 +91,7 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/subscribersTV"
             app:layout_constraintEnd_toStartOf="@+id/userSubscriptionsTV"
-            app:layout_constraintHorizontal_bias="0.467"
+            app:layout_constraintHorizontal_bias="0.547"
             app:layout_constraintStart_toEndOf="@+id/userProfilePictureIV"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
@@ -100,12 +100,16 @@
             android:id="@+id/userNameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
             android:text="@{itemUserViewModel.name}"
             android:textSize="15sp"
-            app:layout_constraintStart_toStartOf="@+id/userProfilePictureIV"
+            app:layout_constraintEnd_toStartOf="@+id/userSubscribersTV"
+            app:layout_constraintHorizontal_bias="0.062"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userProfilePictureIV" />
 
         <ImageView
