--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -98,17 +98,16 @@
 
         <TextView
             android:id="@+id/userNameTV"
-            android:layout_width="wrap_content"
+            android:layout_width="145dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="20dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="3"
             android:text="@{itemUserViewModel.name}"
             android:textSize="15sp"
-            app:layout_constraintEnd_toStartOf="@+id/userSubscribersTV"
-            app:layout_constraintHorizontal_bias="0.062"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userProfilePictureIV" />
 
