bugfix: -  post: creator null         -  post: owner null         -  subscribe. like unlike multipart rest call bug         -  itemsubcategory vm, cant create group all fields must be filled even if they are         -  stackoverflow subcagetory - groups infinite loop

--- a/app/src/main/res/layout/fragment_new_group_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_new_group_in_subcategory.xml
@@ -35,7 +35,7 @@
             app:layout_constraintTop_toBottomOf="@+id/newGroupInSubcategoryImageUrlET" />
 
         <EditText
-            android:text="@={itemSubcategoryViewModel.inputDate}"
+            android:text="@={itemSubcategoryViewModel.inputName}"
             android:id="@+id/newGroupInSubcategoryNameET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
